# raytracer

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  main.cu  my_raytracing.hpp  ppmp3.py
config_examples/: empty.conf  two_spheres.conf
include/LibTrace/: base.hpp  bbox.hpp  color.hpp  interval.hpp  list.hpp  materials.hpp  parse.hpp  ray.hpp  scene.hpp  shapes.hpp  textures.hpp  tracing.hpp  vector.hpp  viewport.hpp
include/LibTrace/materials/: glass.hpp  lamberitan.hpp  light.hpp  metal.hpp
include/LibTrace/shapes/: cube.hpp  sphere.hpp
include/LibTrace/textures/: checker.hpp  solid.hpp
lib/: base.cpp  bbox.cpp  color.cpp  interval.cpp  list.cpp  materials.cpp  parse.cpp  ray.cpp  scene.cpp  shapes.cpp  textures.cpp  tracing.cpp  vector.cpp  viewport.cpp
lib/materials/: glass.cpp  lamberitan.cpp  light.cpp  metal.cpp
lib/shapes/: cube.cpp  sphere.cpp
lib/textures/: checker.cpp  solid.cpp
libs/: base.h  color.h  color.hpp  common.h  common.hpp  geometry.h  includes.h  includes.hpp  list.h  list.hpp  ray.h  ray.hpp  shapes.hpp  styles.h  styles.hpp  vec3.h  vec3.hpp  viewport.h  viewport.hpp
libs/shapes/: base.hpp  pyramid.h  pyramid.hpp  shapes.hpp  sphere.h  sphere.hpp
libs/styles/: base.hpp  dielectric.hpp  lamberitan.hpp  metal.hpp  styles.hpp
libs/textures/: imtext.hpp  textures.hpp
libs/trace/: color.hpp  common.hpp  ray.hpp
libs/trace/shapes/: base.hpp  parallelepiped.hpp
libs/trace/styles/: dielectric.hpp  lamp.hpp  metal.hpp
libs/trace/textures/: base.hpp  checker.hpp  imtext.hpp  solid.hpp
